--- a/data_test.ipynb
+++ b/data_test.ipynb
@@ -3515,8 +3515,8 @@
    "outputs": [],
    "source": [
     "def preprocess_features(X):\n",
-    "    ''' Preprocesses the conversion data and converts non-numeric binary variables into\n",
-    "        dummy variables. Converts categorical variables into dummy variables. '''\n",
+    "    ''' Preprocesses the conversion data and converts non-numeric variables into\n",
+    "        dummy variables.  '''\n",
     "    \n",
     "    # Initialize new output DataFrame\n",
     "    output = pd.DataFrame(index = X.index)\n",
