--- a/data_test.ipynb
+++ b/data_test.ipynb
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** The step below removes the unwanted '|' from all names above except 'age' which did not have it in the first place. We notice that after removing '|' we create a space before every name. For example '| reason for unemployment\" will now be ' reason for unemployment. I won't remove the space because it is immaterial.**"
+    "** The step below removes the unwanted '|' from all names above except 'age' which did not have it in the first place. We notice that after removing '|' we create a space before every name. For example '| reason for unemployment\" will now be ' reason for unemployment. I won't remove the space because it is immaterial. The steps below trying to ascertain the columns were most troubling for me. I think the metadata was a bit confusing in the sense that they name all the columns but they don't use all only the ones that have been described at the end. Maybe its my inexperience speaking.**"
    ]
   },
   {
